# canopus

./: .gitattributes  .gitignore  README.md  bigadder.ipynb  convert.py  coupling_graph.ipynb  gene_toqm_couplings.py  infid.ipynb  notes.md  place_map_rout.ipynb  pyproject.toml  qftqft.py  qiskit_dag.ipynb  qiskit_graph.ipynb  qiskit_iswap.ipynb  rebase_demo.py  test_cost_est.py  tket.ipynb  xxdecomposer.py
accel/: Cargo.toml  Makefile  post_build.sh  pyproject.toml
accel/python/accel_utils/: __init__.py  accel_utils.pyi
accel/src/: lib.rs
analysis/: ashn_steering.ipynb  commutation_analysis.ipynb  gate_set_profiling.ipynb  gate_time_setting.ipynb  optimal_synth.ipynb  qiskit_circ.qasm  swap_opt_opport.ipynb
attic/: basics.py  convert.py  datatypes.py  metrics.py
backup/: Makefile  bench_all.py  circuit_to_latex_quantikz.py  gate_stats.py  qiskit_runtime.ipynb  synthesis.py  test_cost_est.py  utils.py
benchmarks/: description.csv  sum_circ_info.py
canopus/: __init__.py  backends.py  basics.py  custom_decompose_pass.py  customs.py  mapping.py  sabre.py  synthesis.py  synthesis_new.py  utils.py
configs/: chain.txt  het_isa_coverage.pkl  hhex.txt  sqisw_coverage.pkl  sqisw_with_mirror_coverage.pkl  square.txt  zzphase_coverage.pkl  zzphase_with_mirror_coverage.pkl
docs/: aaa.py  aaa.tex  drawing.ipynb  main.tex  reference.bib  refs.bib
examples/: bench_qldpc.py  fidelity_impov.ipynb  qft_cx_vs_zz.ipynb  random_su4_circuit_zzphase.qasm  rebase_circuit.py  rebase_iswap.py  rebase_qft.py  rebase_random_unitary.py  route_demo.py
examples_copy/: qft_10_canopus_zzphase.qasm  qft_12_canopus_zzphase.qasm  qft_6_canopus_cx.qasm  qft_8_canopus_cx.qasm  qft_8_qiskit_cx.qasm  qft_cloud.ipynb  qft_cloud.py  qft_fidelities.json
experiments/: Makefile  (+31 more)
(+1036 files in other folders)
